Register & States API.
Added swagger.
