# app/Http/Resources/State/State.php
@@ -1,0 +1,23 @@
+<?php
+
+namespace App\Http\Resources\State;
+
+use Illuminate\Http\Resources\Json\JsonResource;
+
+class State extends JsonResource
+{
+    /**
+     * Transform the resource into an array.
+     *
+     * @param  \Illuminate\Http\Request  $request
+     * @return array
+     */
+    public function toArray($request)
+    {
+        return [
+            'id' => $this->id,
+            'name' => $this->name,
+            'abbr' => $this->abbreviation,
+        ];
+    }
+}
